WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287329
Fix warnings found by clang-17
https://bugs.webkit.org/show_bug.cgi?id=287329
Summary
Fix warnings found by clang-17
Ryosuke Niwa
Reported
2025-02-08 03:29:43 PST
clang-17 finds more warnings in WebKit codebase. Address them so that use the latest static analyzer.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2025-02-08 03:35:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40284
EWS
Comment 2
2025-02-09 11:08:15 PST
Committed
290118@main
(c6e6edd8f8ff): <
https://commits.webkit.org/290118@main
> Reviewed commits have been landed. Closing PR #40284 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-02-09 11:09:14 PST
<
rdar://problem/144485916
>
EWS
Comment 4
2025-03-19 09:32:25 PDT
Committed
289651.289@safari-7621-branch
(e5a841fb9176): <
https://commits.webkit.org/289651.289@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2828 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug